# symbol-cast

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/: trocr_infer.cpp
apps/desktop/: CanvasWindow.hpp  Info.plist.in  main.cpp
apps/vr/: main.cpp
config/: commands.json  models.json  trocr.json
core/input/: InputManager.hpp  VRInputManager.hpp
core/plugins/: PluginManager.hpp
core/recognition/: GestureRecognizer.hpp  HybridRecognizer.hpp  ModelRunner.hpp  RecognizerRouter.hpp  TrocrDecoder.hpp
data/labeled/: circle_01.csv  cross_01.csv  square_01.csv
docs/: desktop-shell-audit.md  model_training.md
models/: README.md
os/service-macos/: Info.plist  ServiceDelegate.h  ServiceDelegate.m  main.m
scripts/: export_trocr.py  package_macos_app.sh  requirements.txt  track_404.py
scripts/training/: split_dataset.py  train_symbol_model.py  visualize_gesture.py
tests/: test_command_mapping.cpp  test_double_tap.cpp  test_dynamic_recognizer.cpp  test_hybrid_recognizer.cpp  test_model_loading.cpp  test_symbol_match.cpp  test_timestamp.cpp  test_vr_capture.cpp
utils/: Logger.hpp  SymbolicParser.hpp
